setting relative path for index

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <body style="display: none">
     <nav>
       <ul>
-        <li><a href="hello-world.html">Test</a></li>
+        <li><a href="webspace\hello-world.html">Test</a></li>
       </ul>
     </nav>
   </body>
-</html>
+</html> 
